# CS5478Project

./: .gitignore  README.md
api/: dispenser_api.py  dispenser_robot_api.py  waypoint_robot.py.swagger.json  waypoint_robot_api.py
auto-middleware-llm/: README.md  pyproject.toml
auto-middleware-llm/auto_middleware_llm/: constants.py  main.py
controllers/dispenser_controller/: dispenser_controller.py
controllers/dropoff_controller/: dropoff_controller.py
controllers/waypoint_follow_controller/: waypoint_follow_controller.py
data/: ConveyorBelt1_dispenser_PythonRequestsGeneratorForSwaggerAPI.txt  Mir100_1_PythonRequestsGeneratorForSwaggerAPI.txt  Mir100_1_SQLGeneratorForSQLite.txt
lib/: agent_tools.py  base_agent.py  utils.py
protos/: ConveyorBelt.proto  UR10e.proto
rag/: base_agent.py  dispenser_robot_agent.py  waypoint_robot_agent.py
rag_adapter/: abstract_rag_adapter.py  planner_agent.py  rag_interface.py  swagger_rag_adapter_for_dispenser.py  swagger_rag_adapter_for_waypoint_robot.py  waypoint_robot.py
rasa/: config.yml  domain.yml
rasa/actions/: actions.py
rasa/data/: nlu.yml  rules.yml
scripts/: init_rqlite_data.py  init_rqlite_landmarks.py  move_robots.py  rag.py  rqlited.service
worlds/: .demo.wbproj  demo.wbt
