[tool.poetry]
name = "auto-middleware-llm"
version = "0.1.0"
description = ""
authors = ["Boon Han <charayaphan.nakorn.boon.han@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
tiktoken = "^0.5.1"
chromadb = "^0.4.14"
langchain = "^0.0.315"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
